# sdl_playground

./: .gitignore  CMakeLists.txt  README.MD
shaders/: mvp.vert  simple.frag
src/: AppContainer.cpp  AppContainer.h  Color.h  ColorLinesModel.h  Event.h  SpacexContainer.cpp  SpacexContainer.h  SpringModel.cpp  SpringModel.h  logger.cpp  logger.h  main.cpp  res_path.h
src/modelRenderer/: CubeGenerator.cpp  CubeGenerator.h  FuncModel.cpp  FuncModel.h  ModelRenderer.cpp  ModelRenderer.h  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLShaderProgram.cpp  OpenGLShaderProgram.h  OpenGLVAO.cpp  OpenGLVAO.h  TinyObjUtils.cpp  TinyObjUtils.h
